Ajout de nouveaux paramètres de configuration pour PostgreSQL, y compris les limites de ressources et les connexions maximales. Création de scripts pour la gestion des utilisateurs et la restauration des sauvegardes, ainsi qu'un script d'initialisation de base de données.

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,13 @@ POSTGRES_PORT=5432
 # Performance tuning
 POSTGRES_SHARED_BUFFERS=256MB
 POSTGRES_EFFECTIVE_CACHE_SIZE=768MB
+POSTGRES_MAX_CONNECTIONS=100
+POSTGRES_WORK_MEM=4MB
+POSTGRES_MAINTENANCE_WORK_MEM=64MB
+
+# Resource limits
+POSTGRES_CPU_LIMIT=1
+POSTGRES_MEMORY_LIMIT=1G
 
 # Backup configuration
 BACKUP_RETENTION_DAYS=7
