Ajout de la configuration pgAdmin, y compris les variables d'environnement, le service Docker et un script d'installation automatique pour gérer la connexion PostgreSQL.

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,11 @@ POSTGRES_MEMORY_LIMIT=1G
 # Backup configuration
 BACKUP_RETENTION_DAYS=7
 BACKUP_SCHEDULE=0 2 * * *  # Exécution à 2h du matin tous les jours
+
+# pgAdmin configuration
+PGADMIN_DEFAULT_EMAIL=admin@example.com
+PGADMIN_DEFAULT_PASSWORD=change_this_secure_password
+PGADMIN_PORT=5050
+PGADMIN_SERVER_MODE=False
+PGADMIN_MASTER_PASSWORD_REQUIRED=False
+PGADMIN_ENHANCED_COOKIE_PROTECTION=True
