Ajout d'un script d'initialisation pour configurer l'environnement PostgreSQL, y compris la création de répertoires, la configuration automatique de pgAdmin et la gestion des permissions des scripts. Mise à jour du fichier .gitignore pour exclure les fichiers de configuration et de sauvegarde.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@ data/
 # OS specific files
 .DS_Store
 Thumbs.db
+
+# Configuration pgAdmin générée par le script
+config/pgadmin/servers.json
+
+# Backup files
+backups/
