--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,10 +87,13 @@ services:
       - PGADMIN_CONFIG_SERVER_MODE=${PGADMIN_SERVER_MODE:-False}
       - PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED=${PGADMIN_MASTER_PASSWORD_REQUIRED:-False}
       - PGADMIN_CONFIG_ENHANCED_COOKIE_PROTECTION=${PGADMIN_ENHANCED_COOKIE_PROTECTION:-True}
+      # Paramètres pour la connexion automatique
+      - PGADMIN_SERVER_JSON_FILE=/pgadmin4/servers.json
     ports:
       - "${PGADMIN_PORT:-5050}:80"
     volumes:
       - pgadmin_data:/var/lib/pgadmin
+      - ./config/pgadmin/servers.json:/pgadmin4/servers.json:ro
     depends_on:
       postgres:
         condition: service_healthy
