--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,13 @@ PGADMIN_PORT=5050
 PGADMIN_SERVER_MODE=False
 PGADMIN_MASTER_PASSWORD_REQUIRED=False
 PGADMIN_ENHANCED_COOKIE_PROTECTION=True
+
+# Redis configuration
+REDIS_PORT=6379
+REDIS_PASSWORD=change_this_secure_password
+REDIS_MAXMEMORY=256mb
+REDIS_MAXMEMORY_POLICY=allkeys-lru
+REDIS_APPENDONLY=yes
+REDIS_APPENDFSYNC=everysec
+REDIS_CPU_LIMIT=0.5
+REDIS_MEMORY_LIMIT=512M
